# TorchCraftAI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  README.md  index.html  sitemap.xml
common/: CMakeLists.txt  assert.cpp  assert.h  autograd.h  checksum.cpp  checksum.h  circularbuffer.h  datareader.h  flags.h  fsutils.cpp  fsutils.h  language.h  logging.cpp  logging.h  mathutils.h  parallel.h  rand.cpp  rand.h  serialization.cpp  serialization.h  str.cpp  str.h  utils.cpp  utils.h  zstdstream.cpp  zstdstream.h
common/autograd/: debug.cpp  debug.h  distributions.cpp  distributions.h  models.cpp  models.h  operations.cpp  operations.h  utils.cpp  utils.h
cpid/: CMakeLists.txt  a2c.cpp  a2c.h  batcher.cpp  batcher.h  blobpubsub.cpp  blobpubsub.h  blobstorage.cpp  blobstorage.h  c10d.h  centralcpid2ktrainer.cpp  centralcpid2ktrainer.h  centraltrainer.cpp  centraltrainer.h  checkpointer.cpp  checkpointer.h  cpid2kworker.cpp  cpid2kworker.h  distributed.cpp  distributed.h  episodeserver.h  estrainer.cpp  estrainer.h  evaluator.cpp  evaluator.h  metrics.cpp  metrics.h  netutils.cpp  netutils.h  optimizers.cpp  optimizers.h  policygradienttrainer.cpp  policygradienttrainer.h  prioritymutex.h  redisclient.cpp  redisclient.h  redisstore.cpp  redisstore.h  reqrepserver.cpp  reqrepserver.h  (+14 more)
gas_micro/: CMakeLists.txt  common.cpp  common.h  flags.cpp  flags.h  gas_trainer.cpp  gas_trainer.h  gas_trainer_a2c.cpp  gas_trainer_a2c.h  gasmicromodule.cpp  gasmicromodule.h  gasmodel_global.cpp  gasmodel_global.h  gasmodel_globalcnn.cpp  gasmodel_globalcnn.h  gasmodelcnn.cpp  gasmodelcnn.h  gasmodelpf.cpp  gasmodelpf.h  micromodule.cpp  micromodule.h  model.cpp  model.h  modeldummy.cpp  modelpf.cpp  modelpf.h  modelsimplecnn.cpp  rule_module.h  train_micro.cpp  trainingsetup.cpp  trainingsetup.h  trainingstate.cpp  trainingstate.h
scripts/: CMakeLists.txt  build.sh
scripts/bo-switch/: CMakeLists.txt  common.cpp  common.h  loops.cpp  loops.h  modules.cpp  modules.h  print-game-info.cpp  submit-collect-samples.py  train.cpp
scripts/botplay/: CMakeLists.txt  botplay.cpp
scripts/building-placer/: CMakeLists.txt  collect-replay-samples.cpp  common.h  knn-baseline.cpp  stardata_rep_map.json.zst  train-supervised.cpp
scripts/cherryvis/: .gitignore  README.md  build_js.sh  manage.py  openbw_patch.diff  server.py
scripts/defogger/: CMakeLists.txt  dump-stardata.cpp  play-with-defogger.cpp
src/: CMakeLists.txt  areainfo.cpp  areainfo.h  baseplayer.cpp  baseplayer.h  basetypes.h  blackboard.cpp  blackboard.h  botcli-inl.h  buildtype.cpp  buildtype.h  cherrypi.cpp  cherrypi.h  combatsim.cpp  combatsim.h  commandtrackers.cpp  commandtrackers.h  controller.cpp  controller.h  fogofwar.cpp  fogofwar.h  forkserver.cpp  forkserver.h  fsutils.cpp  fsutils.h  main.cpp  microplayer.cpp  microplayer.h  module.cpp  module.h  modules.h  movefilters.cpp  movefilters.h  openbwprocess.cpp  openbwprocess.h  player.cpp  player.h  registry.h  replayer.cpp  replayer.h  (+24 more)
src/buildorders/: 10hatchling.cpp  12hatchhydras.cpp  12poolmuta.cpp  2basemutas.cpp  2hatchmuta.cpp  3basepoollings.cpp  5pool.cpp  9poolspeedlingmuta.cpp  README.md  base.cpp  base.h  delayed4pool.cpp  hydracheese.cpp  hydras.cpp  midmassling.cpp  p4gate.cpp  pve2gate1012.cpp  pve4gate.cpp  pvp2gatedt.cpp  pvpgategateobs.cpp  pvzffe5gategoon.cpp  t5rax.cpp  tvpjoyorush.cpp  tvtz2portwraith.cpp  ultras.cpp  zve9poolspeed.cpp  zvp10hatch.cpp  zvp3hatchhydra.cpp  zvp5hatchhydra.cpp  zvpmutas.cpp  zvpoverpool.cpp  zvt2basehive.cpp  zvt3hatchlurker.cpp  zvtantimech.cpp  zvtmacro.cpp  zvtp1hatchlurker.cpp  zvz12poolhydras.cpp  zvz9gas10pool.cpp  zvz9poolspeed.cpp  zvzoverpool.cpp  (+1 more)
src/features/: README.md  areafeatures.cpp  defoggerfeatures.cpp  defoggerfeatures.h  features.cpp  features.h  jitter.cpp  jitter.h  mapfeatures.cpp  tilesfeatures.cpp  unitsfeatures.cpp  unitsfeatures.h
src/gameutils/: botscenario.cpp  botscenario.h  fifopipes.cpp  fifopipes.h  fixedscenarios.cpp  game.h  gamemultiplayer.cpp  gamesingleplayer.cpp  gametype.h  gamevsbot.cpp  gamevsbot.h  initialconditions.h  mapmatcher.cpp  mapmatcher.h  microfixedscenario.cpp  microfixedscenario.h  microfixedscenariopool.cpp  microfixedscenariopool.h  microrandomscenario.cpp  microrandomscenario.h  microscenarioprovider.cpp  microscenarioprovider.h  microscenarioproviderfixed.cpp  microscenarioproviderfixed.h  microscenarioproviderrandom.cpp  microscenarioproviderrandom.h  microscenarioprovidersnapshot.cpp  microscenarioprovidersnapshot.h  openbwprocess.cpp  openbwprocess.h  playscript.cpp  playscript.h  rewards.cpp  rewards.h  scenarioprovider.cpp  scenarioprovider.h  scenariospecification.h  selfplayscenario.cpp  selfplayscenario.h  torchcraftclient.h
src/models/: bandit.cpp  bandit.h  banditconfigurations.cpp  buildingplacer.cpp  buildingplacer.h  defogger.cpp  defogger.h  micromodel.h
src/modules/: autobuild.cpp  autobuild.h  builder.cpp  builder.h  builderc.cpp  builderc.h  builderhelper.cpp  builderhelper.h  buildingplacer.cpp  buildingplacer.h  cherryvisdumper.cpp  cherryvisdumper.h  combat.cpp  combat.h  combatmicro.cpp  combatmicro.h  creategatherattack.cpp  creategatherattack.h  dummytactics.h  gatherer.cpp  gatherer.h  genericautobuild.cpp  genericautobuild.h  harass.cpp  harass.h  lambda.cpp  lambda.h  once.cpp  once.h  scouting.cpp  scouting.h  squadcombat.cpp  squadcombat.h  staticdefencefocusfire.cpp  staticdefencefocusfire.h  strategy.cpp  strategy.h  tactics.cpp  tactics.h  top.cpp  (+3 more)
src/utils/: commands.h  (+9 more)
targeting/: CMakeLists.txt  common.h  custombatcher.cpp  custombatcher.h  featurize.cpp  featurize.h  flags.cpp  flags.h  keys.h  mockmodule.h  model.cpp  model.h  parameters.cpp  parameters.h  sampler.cpp  sampler.h  solver.cpp  solver.h  targeting.cpp  targetingmodule.cpp  targetingmodule.h  test.cpp
tcbwapi/: CMakeLists.txt  tcgame.cpp  tcgame.h  tcunit.h
test/: .gitignore  CMakeLists.txt  main_test.cpp  test.h
tutorials/: CMakeLists.txt
visdom/: CMakeLists.txt  test.cpp  visdom.cpp  visdom.h
(+1679 files in other folders)
