# Copyright (c) 2017-present, Facebook, Inc.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

FIND_PACKAGE(ZMQ REQUIRED)
FIND_PACKAGE(Hiredis REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

FIND_PACKAGE(CUDA)
IF(CUDA_FOUND)
  ADD_DEFINITIONS(-DHAVE_CUDA)
ENDIF(CUDA_FOUND)

FILE(GLOB SRCS *.cpp)

IF(NOT TORCH_FOUND)
  FIND_PACKAGE(Torch REQUIRED)
  ADD_DEFINITIONS(-DHAVE_ATEN)
ENDIF(NOT TORCH_FOUND)

ADD_LIBRARY(cpid "${SRCS}")
IF(NOT CPID_DISTRIBUTED)
  MESSAGE(WARNING "C10D/GLOO are only built on Linux - cpid will NOT have distributed support")
ELSE()
  FIND_LIBRARY(C10D c10d
    PATHS "${PYTORCH_DIR}/lib"
    NO_DEFAULT_PATH
  )
  FIND_LIBRARY(GLOO gloo
    PATHS "${PYTORCH_DIR}/lib"
    NO_DEFAULT_PATH
  )
  FIND_LIBRARY(GLOO_BUILDER gloo_builder
    PATHS "${PYTORCH_DIR}/lib"
    NO_DEFAULT_PATH
  )
  TARGET_LINK_LIBRARIES(cpid
    "${C10D}"
    "${GLOO}"
    "${GLOO_BUILDER}"
    nccl
  )
ENDIF()

IF(CUDA_FOUND)
  FIND_LIBRARY(GLOO_CUDA gloo_cuda
    PATHS "${PYTORCH_DIR}/lib"
    NO_DEFAULT_PATH
  )
  TARGET_LINK_LIBRARIES(cpid cudart "${GLOO_CUDA}")
  TARGET_INCLUDE_DIRECTORIES(cpid SYSTEM PUBLIC ${CUDA_TOOLKIT_INCLUDE})
ENDIF(CUDA_FOUND)

TARGET_COMPILE_OPTIONS(cpid PRIVATE "${CHERRYPI_WARNINGS}")
SET_PROPERTY(TARGET cpid PROPERTY POSITION_INDEPENDENT_CODE ON)
FIND_LIBRARY(LIB_HIREDIS hiredis REQUIRED)
TARGET_LINK_LIBRARIES(cpid
  Torch fmt ${ZMQ_LIBRARIES} visdom pthread ${LIB_HIREDIS} common
)
TARGET_INCLUDE_DIRECTORIES(cpid PUBLIC "${PROJECT_SOURCE_DIR}/3rdparty/include")
TARGET_INCLUDE_DIRECTORIES(cpid SYSTEM PRIVATE "${ZMQ_INCLUDE_DIR}")
TARGET_INCLUDE_DIRECTORIES(cpid PUBLIC "${PROJECT_SOURCE_DIR}")
